Corrected alignment of Main Text in Music.html

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -96,3 +96,7 @@ tr {
 .faf {
     color: white;
 }
+
+.newalbd {
+    margin-bottom: 8px;
+}
